# QueryHouse

./: .dockerignore  .gitignore  BUGLIST  CMakeLists.txt  Dockerfile  LICENSE  README.md  afl_build.sh  afl_run.sh  build.sh  config.sh  mute_sqlglot.patch  opti_swarm_run.py  run.py  single_docker_run.sh  submodule_init.sh
CMakeModules/: FindOracle.cmake
data/config/: template_mariadb.yml  template_mysql.yml  template_oracle.yml  template_postgresql.yml  template_sqlite.yml
data/fuzz_root/init_lib/: 11.txt  CTE.txt  Foreign_Key.txt  Foreignkey  JOIN  JOIN.txt  JOIN_ON  JOIN_USING  JSON.txt  Library_seed_cte  Library_seed_cte_recursive  Library_seed_full-text_search  Library_seed_generrated_column_stored  Library_seed_generrated_column_virtual  Library_seed_json  RECURSIVE_CTE.txt  TEMPORARY_TABLE  Temporary_Table.txt  VIEW  View.txt  WindowFunc_AVG.txt  WindowFunc_COUNT.txt  WindowFunc_CUME_DIST.txt  WindowFunc_DENSE_RANK.txt  WindowFunc_MAX.txt  WindowFunc_MIN.txt  WindowFunc_NTH_VALUE.txt  WindowFunc_RANK.txt  WindowFunc_ROW_NUMBER.txt  WindowFunc_SUM.txt  WindowFunction  genrated_Columns_STORED.txt  genrated_Columns_VIRTUAL.txt
data/fuzz_root/keyword/: builtin_functions.txt  reserved_keywords.txt
data/fuzz_root/sql_input/: 1. json_001.txt  1. json_002.txt  1. json_003.txt  1. json_004.txt  1. json_005.txt  1. json_006.txt  1. json_007.txt  1. json_008.txt  1. json_009.txt  1. json_010.txt  1. json_011.txt  1. json_012.txt  1. json_013.txt  1. json_014.txt  1. json_015.txt  1. json_016.txt  1. json_017.txt  1. json_018.txt  1. json_019.txt  1. json_020.txt  1. json_021.txt  1. json_022.txt  1. json_023.txt  1. json_024.txt  1. json_025.txt  1. json_026.txt  1. json_027.txt  1. json_028.txt  1. json_029.txt  1. json_030.txt  1. json_031.txt  1. json_032.txt  1. json_033.txt  1. json_034.txt  1. json_035.txt  1. json_036.txt  1. json_037.txt  1. json_038.txt  1. json_039.txt  1. json_040.txt  (+2065 more)
docker/: .gitignore  afl_run.sh  mariadb_run.sh  run-multi.py  run-single.py
docker/afl/: afl-fuzz-init.c
docker/data/config/: config_mariadb.yml  config_mysql.yml  config_oracle.yml  config_postgresql.yml  config_sqlite.yml
docker/data/fuzz_root/init_lib/: 11.txt  CTE.txt  Foreign_Key.txt  JOIN.txt  JSON.txt  Temporary_Table.txt  View.txt  WindowFunc.txt  WindowFunc_AVG.txt  WindowFunc_COUNT.txt  WindowFunc_FIRST_VALUE.txt  WindowFunc_LAG.txt  WindowFunc_LAST_VALUE.txt  WindowFunc_LEAD.txt  WindowFunc_MAX.txt  WindowFunc_MIN.txt  WindowFunc_NTILE.txt  WindowFunc_PERCENT_RANK.txt  WindowFunc_SUM.txt  generated_columns.txt
docker/data/fuzz_root/keyword/: operators.txt
docker/data/fuzz_root/sql_input/: 1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  129.txt  13.txt  130.txt  131.txt  132.txt  134.txt  135.txt  136.txt  (+122 more)
docs/: BUGLIST.md  incon1.md  incon2.md  incon3.md  incon4.md  incon5.md  incon6.md  incon7.md  incon8.md
scripts/: db_driver_run.sh  docker_report.py  docker_speed_monitor.py  oracle_install.sh  oracle_remove.sh  oracle_run.sh  report.py  speed_monitor.py
srcs/: common.cc  common.h  custom_mutator.cc  db.h  db_driver.cc  db_factory.cc  executor.cc  executor.h  llm_api.cc  llm_api.h  llm_api.py  postprocess.cc  postprocess.h  transpile.cc  transpile.h
srcs/cov/: kwcov.cpp  kwcov.h
srcs/internal/client/: client.cc  client.h  client_mariadb.cc  client_mariadb.h  client_mysql.cc  client_mysql.h  client_oracle.cc  client_oracle.h  client_postgresql.cc  client_postgresql.h  client_sqlite.cc  client_sqlite.h
srcs/internal/sqlite/: sqlite.cc  sqlite.h
srcs/internal/sqlite/include/: ast.h  define.h  mutator.h  utils.h
srcs/internal/sqlite/parser/: bison_parser.cpp  bison_parser.h  bison_parser.output  bison_parser.y  flex_lexer.cpp  flex_lexer.h  flex_lexer.l
srcs/internal/sqlite/srcs/: ast.cpp  mutator.cpp  utils.cpp
srcs/utils/: config_validate.cc  logging.h  seed_formatter.cc  string_helpers.cpp  string_helpers.h
